[package]
name = "libnfs"
version = "2.0.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "libnfs bindings allow you to create nfs mounts in memory/userspace"
homepage = "https://github.com/cholcombe973/libnfs"
repository = "https://github.com/cholcombe973/libnfs"
documentation = "https://docs.rs/libnfs"
license = "MIT"
readme = "README.md"
keywords = ["nfs"]
categories = ["api-bindings", "network-programming", "filesystem", "external-ffi-bindings"]
edition = '2021'


[dependencies]
libc = "~0.2"
libnfs-sys = "~0.2"
nix = "~0.25"
