[package]
name = "libnfs"
version = "0.2.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "libnfs bindings allow you to create nfs mounts in memory/userspace"
homepage = "https://github.com/cholcombe973/libnfs"
repository = "https://github.com/cholcombe973/libnfs"
documentation = "https://docs.rs/libnfs"
license = "MIT"
readme = "README.md"
keywords = ["nfs"]
categories = ["api-bindings", "network-programming", "filesystem", "external-ffi-bindings"]
edition = '2021'

[dependencies]
libc = "~0.2"
# Presently the version of crates.io doesn't work (needs update)
libnfs-sys = { git = "https://github.com/cholcombe973/libnfs-sys", ref="890d7566e284ffb00b9d42dedc3cdc1340922e5a" }
nix = "~0.25"

